class loader urls fixed for dir projects